--- a/employee/templates/customer/index.html
+++ b/employee/templates/customer/index.html
@@ -19,27 +19,27 @@
     </div>  
   </div>  
     <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Employee Id:</label>  
+    <label class="col-sm-2 col-form-label">Customer Name:</label>  
     <div class="col-sm-4">  
-      {{ form.eid }}  
+      {{ form.cname }}  
     </div>  
   </div>  
   <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Employee Name:</label>  
+    <label class="col-sm-2 col-form-label">Customer Phone:</label>  
     <div class="col-sm-4">  
-      {{ form.ename }}  
+      {{ form.cphone }}  
     </div>  
   </div>  
     <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Employee Email:</label>  
+    <label class="col-sm-2 col-form-label">Customer Address:</label>  
     <div class="col-sm-4">  
-      {{ form.eemail }}  
+      {{ form.caddress }}  
     </div>  
   </div>  
     <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Employee Contact:</label>  
+    <label class="col-sm-2 col-form-label">Customer gender:</label>  
     <div class="col-sm-4">  
-      {{ form.econtact }}  
+      {{ form.cgender }}  
     </div>  
   </div>  
     <div class="form-group row">  
