--- a/employee/templates/customer/show.html
+++ b/employee/templates/customer/show.html
@@ -11,20 +11,20 @@
 <table class="table table-striped table-bordered table-sm">  
     <thead class="thead-dark">  
     <tr>  
-        <th>Employee ID</th>  
-        <th>Employee Name</th>  
-        <th>Employee Email</th>  
-        <th>Employee Contact</th>  
+        <th>Customer name</th>  
+        <th>Customer phone</th>  
+        <th>Customer address</th>  
+        <th>Customer gender</th>  
         <th>Actions</th>  
     </tr>  
     </thead>  
     <tbody>  
-{% for employee in employees %}  
+{% for customer in customers %}  
     <tr>  
-        <td>{{ employee.eid }}</td>  
-        <td>{{ employee.ename }}</td>  
-        <td>{{ employee.eemail }}</td>  
-        <td>{{ employee.econtact }}</td>  
+        <td>{{ customer.cname }}</td>  
+        <td>{{ customer.cphone }}</td>  
+        <td>{{ customer.caddress }}</td>  
+        <td>{{ customer.cgender }}</td>  
         <td>  
             <a href="/edit/{{ employee.id }}"><span class="glyphicon glyphicon-pencil" >Edit</span></a>  
             <a href="/delete/{{ employee.id }}">Delete</a>  
