--- a/employee/templates/front.html
+++ b/employee/templates/front.html
@@ -21,13 +21,13 @@
     <tbody>  
     <tr>  
         <td>
-            <a href="/show"><span class="glyphicon glyphicon-pencil" >고객 테이블 입력</span></a>
+            <a href="/show/0"><span class="glyphicon glyphicon-pencil" >고객 테이블 입력</span></a>
         </td>  
         <td>
-            <a href="/show"><span class="glyphicon glyphicon-pencil" >거래 테이블 입력</span></a>
+            <a href="/show/1"><span class="glyphicon glyphicon-pencil" >거래 테이블 입력</span></a>
         </td>  
         <td>
-            <a href="/show"><span class="glyphicon glyphicon-pencil" >상품 테이블 입력</span></a>
+            <a href="/show/2"><span class="glyphicon glyphicon-pencil" >상품 테이블 입력</span></a>
         </td>  
         <td>blank</td>  
         <td>blank</td>  
