split all objects

--- a/employee/templates/customer/show.html
+++ b/employee/templates/customer/show.html
@@ -35,6 +35,6 @@
 </table>  
 <br>  
 <br>  
-<center><a href="/emp/0" class="btn btn-primary">Add New Record</a></center>  
+<center><a href="/emp/customer" class="btn btn-primary">Add New Record</a></center>  
 </body>  
 </html>
