emp ->emp/customer

--- a/employee/templates/customer/index.html
+++ b/employee/templates/customer/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>  
 </head>  
 <body>  
-<form method="POST" class="post-form" action="/emp">  
+<form method="POST" class="post-form" action="/emp/customer">  
         {% csrf_token %}  
     <div class="container">  
 <br>  
