--- a/employee/templates/customer/edit.html
+++ b/employee/templates/customer/edit.html
@@ -21,25 +21,25 @@
     <div class="form-group row">  
     <label class="col-sm-2 col-form-label">Customer Name:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="cname" id="id_cname" required maxlength="20" value="{{ customer.cname }}"/>  
+        <input type="text" name="cname" id="id_name" required maxlength="20" value="{{ customer.id_name }}"/>  
     </div>  
   </div>  
   <div class="form-group row">  
     <label class="col-sm-2 col-form-label">Customer Phone:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="cphone" id="id_cphone" required maxlength="100" value="{{ customer.cphone }}" />  
+        <input type="text" name="cphone" id="id_phone" required maxlength="100" value="{{ customer.id_phone }}" />  
     </div>  
   </div>  
     <div class="form-group row">  
     <label class="col-sm-2 col-form-label">Costomer address:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="caddress" id="id_caddress" required maxlength="254" value="{{ customer.caddress }}" />  
+        <input type="text" name="caddress" id="id_address" required maxlength="254" value="{{ customer.id_address }}" />  
     </div>  
   </div>  
     <div class="form-group row">  
     <label class="col-sm-2 col-form-label">Customer gender:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="cgender" id="id_cgender" required maxlength="15" value="{{ customer.cgender }}" />  
+        <input type="text" name="cgender" id="id_gender" required maxlength="15" value="{{ customer.id_gender }}" />  
     </div>  
   </div>  
     <div class="form-group row">  
