show and insert to all tables

--- a/employee/templates/customer/index.html
+++ b/employee/templates/customer/index.html
@@ -21,25 +21,25 @@
     <div class="form-group row">  
     <label class="col-sm-2 col-form-label">Customer Name:</label>  
     <div class="col-sm-4">  
-      {{ form.id_name }}  
+      {{ form.name }}  
     </div>  
   </div>  
   <div class="form-group row">  
     <label class="col-sm-2 col-form-label">Customer Phone:</label>  
     <div class="col-sm-4">  
-      {{ form.id_phone }}  
+      {{ form.phone }}  
     </div>  
   </div>  
     <div class="form-group row">  
     <label class="col-sm-2 col-form-label">Customer Address:</label>  
     <div class="col-sm-4">  
-      {{ form.id_address }}  
+      {{ form.address }}  
     </div>  
   </div>  
     <div class="form-group row">  
     <label class="col-sm-2 col-form-label">Customer gender:</label>  
     <div class="col-sm-4">  
-      {{ form.id_gender }}  
+      {{ form.gender }}  
     </div>  
   </div>  
     <div class="form-group row">  
