--- a/employee/templates/transaction/edit.html
+++ b/employee/templates/transaction/edit.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">  
     <title>Index</title>  
     {% load static %}  
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>  
 </head>  
 <body>  
@@ -19,27 +19,27 @@
     </div>  
   </div>  
     <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Employee Id:</label>  
+    <label class="col-sm-2 col-form-label">Customer Name:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="eid" id="id_eid" required maxlength="20" value="{{ employee.eid }}"/>  
+        <input type="text" name="cname" id="id_name" required maxlength="20" value="{{ customer.id_name }}"/>  
     </div>  
   </div>  
   <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Employee Name:</label>  
+    <label class="col-sm-2 col-form-label">Customer Phone:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="ename" id="id_ename" required maxlength="100" value="{{ employee.ename }}" />  
+        <input type="text" name="cphone" id="id_phone" required maxlength="100" value="{{ customer.id_phone }}" />  
     </div>  
   </div>  
     <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Employee Email:</label>  
+    <label class="col-sm-2 col-form-label">Costomer address:</label>  
     <div class="col-sm-4">  
-        <input type="email" name="eemail" id="id_eemail" required maxlength="254" value="{{ employee.eemail }}" />  
+        <input type="text" name="caddress" id="id_address" required maxlength="254" value="{{ customer.id_address }}" />  
     </div>  
   </div>  
     <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Employee Contact:</label>  
+    <label class="col-sm-2 col-form-label">Customer gender:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="econtact" id="id_econtact" required maxlength="15" value="{{ employee.econtact }}" />  
+        <input type="text" name="cgender" id="id_gender" required maxlength="15" value="{{ customer.id_gender }}" />  
     </div>  
   </div>  
     <div class="form-group row">  
