--- a/employee/templates/customer/show.html
+++ b/employee/templates/customer/show.html
@@ -26,8 +26,8 @@
         <td>{{ customer.address }}</td>  
         <td>{{ customer.gender }}</td>  
         <td>  
-            <a href="/edit/{{ customer.name }}"><span class="glyphicon glyphicon-pencil" >Edit</span></a>  
-            <a href="/delete/{{ customer.name }}">Delete</a>  
+            <a href="/edit/customer/{{ customer.name }}"><span class="glyphicon glyphicon-pencil" >Edit</span></a>  
+            <a href="/delete/customer/{{ customer.name }}">Delete</a>  
         </td>  
     </tr>  
 {% endfor %}  
