--- a/employee/templates/product/show.html
+++ b/employee/templates/product/show.html
@@ -23,8 +23,8 @@
         <td>{{ product.productID }}</td>  
         <td>{{ product.supplierName }}</td>  
         <td>  
-            <a href="/edit/{{ product.name }}"><span class="glyphicon glyphicon-pencil" >Edit</span></a>  
-            <a href="/delete/{{ product.name }}">Delete</a>  
+            <a href="/edit/product/{{ product.name }}"><span class="glyphicon glyphicon-pencil" >Edit</span></a>  
+            <a href="/delete/product/{{ product.name }}">Delete</a>  
         </td>  
     </tr>  
 {% endfor %}  
