--- a/employee/templates/customer/edit.html
+++ b/employee/templates/customer/edit.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>  
 </head>  
 <body>  
-<form method="POST" class="post-form" action="/update/{{employee.id}}">  
+<form method="POST" class="post-form" action="/update/customer/{{customer.name}}">  
         {% csrf_token %}  
     <div class="container">  
 <br>  
@@ -21,25 +21,25 @@
     <div class="form-group row">  
     <label class="col-sm-2 col-form-label">Customer Name:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="cname" id="id_name" required maxlength="20" value="{{ customer.id_name }}"/>  
+        <input type="text" name="name" id="id_name" required maxlength="20" value="{{ customer.name }}"/>  
     </div>  
   </div>  
   <div class="form-group row">  
     <label class="col-sm-2 col-form-label">Customer Phone:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="cphone" id="id_phone" required maxlength="100" value="{{ customer.id_phone }}" />  
+        <input type="text" name="phone" id="id_phone" required maxlength="100" value="{{ customer.phone }}" />  
     </div>  
   </div>  
     <div class="form-group row">  
     <label class="col-sm-2 col-form-label">Costomer address:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="caddress" id="id_address" required maxlength="254" value="{{ customer.id_address }}" />  
+        <input type="text" name="address" id="id_address" required maxlength="254" value="{{ customer.address }}" />  
     </div>  
   </div>  
     <div class="form-group row">  
     <label class="col-sm-2 col-form-label">Customer gender:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="cgender" id="id_gender" required maxlength="15" value="{{ customer.id_gender }}" />  
+        <input type="text" name="gender" id="id_gender" required maxlength="15" value="{{ customer.gender }}" />  
     </div>  
   </div>  
     <div class="form-group row">  
