--- a/employee/templates/product/edit.html
+++ b/employee/templates/product/edit.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>  
 </head>  
 <body>  
-<form method="POST" class="post-form" action="/update/{{employee.id}}">  
+<form method="POST" class="post-form" action="/update/product/{{product.productID}}">  
         {% csrf_token %}  
     <div class="container">  
 <br>  
@@ -19,29 +19,22 @@
     </div>  
   </div>  
     <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Customer Name:</label>  
+    <label class="col-sm-2 col-form-label">Product ID:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="cname" id="id_name" required maxlength="20" value="{{ customer.id_name }}"/>  
+        <input type="text" name="name" id="id_name" required maxlength="20" value="{{ product.name }}"/>  
     </div>  
   </div>  
   <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Customer Phone:</label>  
+    <label class="col-sm-2 col-form-label">Product ID:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="cphone" id="id_phone" required maxlength="100" value="{{ customer.id_phone }}" />  
+        <input type="text" name="productID" id="id_productID" required maxlength="100" value="{{ product.productID }}" />  
     </div>  
   </div>  
     <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Costomer address:</label>  
+    <label class="col-sm-2 col-form-label">Product supplierName:</label>  
     <div class="col-sm-4">  
-        <input type="text" name="caddress" id="id_address" required maxlength="254" value="{{ customer.id_address }}" />  
+        <input type="text" name="supplierName" id="id_supplierName" required maxlength="254" value="{{ product.supplierName }}" />  
     </div>  
-  </div>  
-    <div class="form-group row">  
-    <label class="col-sm-2 col-form-label">Customer gender:</label>  
-    <div class="col-sm-4">  
-        <input type="text" name="cgender" id="id_gender" required maxlength="15" value="{{ customer.id_gender }}" />  
-    </div>  
-  </div>  
     <div class="form-group row">  
     <label class="col-sm-1 col-form-label"></label>  
     <div class="col-sm-4">  
