--- a/employee/templates/transaction/show.html
+++ b/employee/templates/transaction/show.html
@@ -15,7 +15,7 @@
         <th>Transaction product id</th>  
         <th>Transaction price</th>  
         <th>Transaction date</th>  
-        <th>Transaction custmerName</th>  
+        <th>Transaction customerName</th>  
     </tr>  
     </thead>  
     <tbody>  
