--- a/employee/templates/product/index.html
+++ b/employee/templates/product/index.html
@@ -35,6 +35,7 @@
     <div class="col-sm-4">  
       {{ form.supplierName }}  
     </div>  
+  </div> 
     <div class="form-group row">  
     <label class="col-sm-1 col-form-label"></label>  
     <div class="col-sm-4">  
