--- a/employee/templates/front.html
+++ b/employee/templates/front.html
@@ -14,6 +14,7 @@
         <th>고객</th>  
         <th>거래</th>  
         <th>상품</th>  
+        <th>CSV 업로드</th> 
         <th>검색</th>  
         <th>특수 조건 검색</th>  
     </tr>  
@@ -29,6 +30,9 @@
         <td>
             <a href="/show/product"><span class="glyphicon glyphicon-pencil" >상품 테이블 입력</span></a>
         </td>  
+        <td>
+            <a href="/CSVUpload"><span class="glyphicon glyphicon-pencil" >CSV 업로드</span></a>
+        </td> 
         <td>blank</td>  
         <td>blank</td>  
     </tr>  
