--- a/employee/templates/csvUpload.html
+++ b/employee/templates/csvUpload.html
@@ -8,8 +8,9 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>  
 </head>  
 <body>  
-    <form method="POST" class="post-form" enctype="multipart/form-data">  
+    <form method="POST" class="post-form" enctype="multipart/form-data" action="/CSVUpload">  
         {% csrf_token %}  
+        {{ form.as_p }}  
         <button type="submit" class="save btn btn-default">Save</button>  
     </form>  
 </body>  
