--- a/employee/templates/csvUpload.html
+++ b/employee/templates/csvUpload.html
@@ -11,7 +11,7 @@
     <form method="POST" class="post-form" enctype="multipart/form-data" action="/CSVUpload/">  
         {% csrf_token %}  
         <input type="file" name="fileToUpload" id="fileToUpload"> 
-        <button type="submit" class="save btn btn-default">Save</button>  
+        <button type="submit" class="btn btn-primary">Save</button>  
     </form>  
 </body>  
 </html>
