--- a/employee/templates/customer/show.html
+++ b/employee/templates/customer/show.html
@@ -36,5 +36,20 @@
 <br>  
 <br>  
 <center><a href="/emp/customer" class="btn btn-primary">Add New Record</a></center>  
+<br> 
+<br> 
+<center>
+    <form action="/search">
+    <label for="col">Choose a column:</label>
+    <select name="col" id="col">
+        <option value="name">name</option>
+        <option value="phone">phone</option>
+        <option value="address">address</option>
+        <option value="gender">gender</option>
+    </select>
+    <input type="text" placeholder="search">
+    <input type="submit" value="Submit">
+    </form>
+</center>
 </body>  
 </html>
