--- a/employee/templates/customer/show.html
+++ b/employee/templates/customer/show.html
@@ -39,17 +39,30 @@
 <br> 
 <br> 
 <center>
-    <form action="/search">
-    <label for="col">Choose a column:</label>
-    <select name="col" id="col">
-        <option value="name">name</option>
-        <option value="phone">phone</option>
-        <option value="address">address</option>
-        <option value="gender">gender</option>
-    </select>
-    <input type="text" placeholder="search">
-    <input type="submit" value="Submit">
-    </form>
+    <form method="POST" class="post-form" action="/search/">  
+        {% csrf_token %}  
+        <div class="container">  
+        <label for="col">Choose a column:</label>
+        <div class="form-group row">  
+        <select name="col" id="col">
+            <option value="name">name</option>
+            <option value="phone">phone</option>
+            <option value="address">address</option>
+            <option value="gender">gender</option>
+        </select>
+      </div>  
+      <div class="form-group row">  
+        <input type="text" name="search" id="id_search" required maxlength="100" placeholder="search" /> 
+      </div>  
+      
+    <div class="form-group row">  
+        <label class="col-sm-1 col-form-label"></label>  
+        <div class="col-sm-4">  
+        <button type="submit" class="btn btn-primary">Submit</button>  
+        </div>  
+      </div>  
+    </div>  
+    </form> 
 </center>
 </body>  
 </html>
