--- a/employee/templates/customer/show.html
+++ b/employee/templates/customer/show.html
@@ -50,17 +50,13 @@
             <option value="address">address</option>
             <option value="gender">gender</option>
         </select>
-      </div>  
-      <div class="form-group row">  
+
         <input type="text" name="search" id="id_search" required maxlength="100" placeholder="search" /> 
       </div>  
       
-    <div class="form-group row">  
-        <label class="col-sm-1 col-form-label"></label>  
-        <div class="col-sm-4">  
-        <button type="submit" class="btn btn-primary">Submit</button>  
-        </div>  
-      </div>  
+
+        <button type="submit" class="btn btn-primary">Search</button>  
+
     </div>  
     </form> 
 </center>
