--- a/employee/templates/transaction/show.html
+++ b/employee/templates/transaction/show.html
@@ -39,20 +39,29 @@
 <center><a href="/emp/transaction" class="btn btn-primary">Add New Record</a></center>  
 <br> 
 <br> 
-
 <center>
-    <form action="/search">
-    <label for="col">Choose a column:</label>
-    <select name="col" id="col">
-        <option value="name">name</option>
-        <option value="phone">phone</option>
-        <option value="address">address</option>
-        <option value="gender">gender</option>
-    </select>
-    <input type="text" placeholder="search">
-    <input type="submit" value="Submit">
-    </form>
+    <form method="POST" class="post-form" action="/search/">  
+        {% csrf_token %}  
+        <div class="container">  
+        <label for="col">Choose a column:</label>
+        <select name="col" id="col">
+            <option value="transactionNumber">transactionNumber</option>
+            <option value="productID">productID</option>
+            <option value="price">price</option>
+            <option value="date">date</option>
+            <option value="customerName">customerName</option>
+        </select>
+
+        <input type="text" name="search" id="id_search" required maxlength="100" placeholder="search" /> 
+      </div>  
+      
+
+        <button type="submit" class="btn btn-primary">Search</button>  
+
+    </div>  
+    </form> 
 </center>
+
 
 </body>  
 </html>
