특수조건검색 init

--- a/employee/templates/transaction/show.html
+++ b/employee/templates/transaction/show.html
@@ -40,7 +40,7 @@
 <br> 
 <br> 
 <center>
-    <form method="POST" class="post-form" action="/search/">  
+    <form method="POST" class="post-form" action="/searchTransaction/">  
         {% csrf_token %}  
         <div class="container">  
         <label for="col">Choose a column:</label>
