--- a/employee/templates/front.html
+++ b/employee/templates/front.html
@@ -15,8 +15,7 @@
         <th>거래</th>  
         <th>상품</th>  
         <th>CSV 업로드</th> 
-        <th>검색</th>  
-        <th>특수 조건 검색</th>  
+        <th>특수조건검색</th>  
     </tr>  
     </thead>  
     <tbody>  
@@ -33,8 +32,9 @@
         <td>
             <a href="/CSVUpload"><span class="glyphicon glyphicon-pencil" >CSV 업로드</span></a>
         </td> 
-        <td>blank</td>  
-        <td>blank</td>  
+        <td>
+            <a href="/specialSearch"><span class="glyphicon glyphicon-pencil" >특수 조건 검색</span></a>
+        </td>  
     </tr>  
     </tbody>  
 </table>  
