--- a/employee/templates/specialSearch.html
+++ b/employee/templates/specialSearch.html
@@ -18,7 +18,8 @@
     <tbody>  
 {% for A in As %}  
     <tr>  
-        <td>{{ A.productName }}</td>    
+        <td>{{ A.productName }}</td>
+        <td>{{ A.cnt }}</td>     
     </tr>  
 {% endfor %}  
     </tbody>  
@@ -26,44 +27,26 @@
 
 <br>
 <br>
+<br>  
+<br> 
 
 <form method="POST" class="post-form" action="/searchK/">  
     {% csrf_token %}  
-    <div class="container"> 
     <input type="text" name="date" id="id_date" required maxlength="100" placeholder="input date" />  
-    <input type="text" name="K" id="id_K" required maxlength="100" placeholder="input K" /> 
-  </div>  
-  
-
+    <input type="text" name="K" id="id_K" required maxlength="100" placeholder="input K" />   
     <button type="submit" class="btn btn-primary">Search</button>  
-</div>
-</div>  
 </form> 
 
 <br>  
 <br> 
-<table class="table table-striped table-bordered table-sm">  
-    <thead class="thead-dark">  
-    <tr>  
-        <th>Supplier</th>  
-        <th>product name</th>  
-        <th>customer name</th>  
-        <th>buy count</th>  
-    </tr>  
-    </thead>  
-    <tbody>  
-{% for C in Cs %}  
-    <tr>  
-        <td>{{ C.supplierName }}</td>  
-        <td>{{ C.productName }}</td>  
-        <td>{{ C.custoerName }}</td>  
-        <td>{{ C.buyCount }}</td>    
-    </tr>  
-{% endfor %}  
-    </tbody>  
-</table>  
 <br>  
-<br>  
-<center><a href="/emp" class="btn btn-primary">Add New Record</a></center>  
+<br> 
+
+<form method="POST" class="post-form" action="/searchM/">  
+    {% csrf_token %}  
+    <input type="text" name="M" id="id_M" required maxlength="100" placeholder="input M" />   
+    <button type="submit" class="btn btn-primary">Search</button>  
+</form> 
+
 </body>  
 </html>
