--- a/employee/templates/searchM.html
+++ b/employee/templates/searchM.html
@@ -36,8 +36,8 @@
         <tr>  
             <td>{{ C.supplierName }}</td>  
             <td>{{ C.productName }}</td>  
-            <td>{{ C.custoerName }}</td>  
-            <td>{{ C.buyCount }}</td>    
+            <td>{{ C.customerName }}</td>  
+            <td>{{ C.cnt }}</td>    
         </tr>  
     {% endfor %}  
         </tbody>  
