--- a/employee/templates/product/show.html
+++ b/employee/templates/product/show.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>  
 </head>  
 <body>  
+<a href="/goHome" class="btn btn-primary">go Home</a>
+<br>
+<br>
 <table class="table table-striped table-bordered table-sm">  
     <thead class="thead-dark">  
     <tr>  
