--- a/employee/templates/csvUpload.html
+++ b/employee/templates/csvUpload.html
@@ -7,7 +7,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}"/>  
 </head>  
-<body>  
+<body> 
+    <a href="/goHome" class="btn btn-primary">go Home</a>
+    <br>
+    <br> 
     <form method="POST" class="post-form" enctype="multipart/form-data" action="/CSVUpload/">  
         {% csrf_token %}  
         <input type="file" name="fileToUpload" id="fileToUpload"> 
