--- a/employee/templates/front.html
+++ b/employee/templates/front.html
@@ -21,26 +21,26 @@
     <tbody>  
     <tr>  
         <td>
-            <a href="/show/customer"><span style="font-size:20" class="glyphicon glyphicon-pencil" >고객 테이블 입력</span></a>
+            <a href="/show/customer"><span class="glyphicon glyphicon-pencil" >고객 테이블 입력</span></a>
         </td>  
         <td>
-            <a href="/show/transaction"><span style="font-size:20" class="glyphicon glyphicon-pencil" >거래 테이블 입력</span></a>
+            <a href="/show/transaction"><span class="glyphicon glyphicon-pencil" >거래 테이블 입력</span></a>
         </td>  
         <td>
-            <a href="/show/product"><span style="font-size:20" class="glyphicon glyphicon-pencil" >상품 테이블 입력</span></a>
+            <a href="/show/product"><span class="glyphicon glyphicon-pencil" >상품 테이블 입력</span></a>
         </td>  
         <td>
-            <a href="/CSVUpload"><span style="font-size:20" class="glyphicon glyphicon-pencil" >CSV 업로드</span></a>
+            <a href="/CSVUpload"><span class="glyphicon glyphicon-pencil" >CSV 업로드</span></a>
         </td> 
         <td>
-            <a href="/specialSearch"><span style="font-size:20" class="glyphicon glyphicon-pencil" >특수 조건 검색</span></a>
+            <a href="/specialSearch"><span class="glyphicon glyphicon-pencil" >특수 조건 검색</span></a>
         </td>  
     </tr>  
     </tbody>  
 </table>  
 <br>
 <br>
-<center><a href="/deleteAll" class="btn btn-primary">Delete ALL</a></center>  
+<center><a href="/deleteAll" class="btn btn-primary">Delete ALL Data(고객, 거래, 상품)</a></center>  
  
 </body>  
 </html>
