--- a/employee/templates/specialSearch.html
+++ b/employee/templates/specialSearch.html
@@ -31,7 +31,7 @@
 <br>
 <br>  
 <br> 
-<label>B.	주어진 날 이전에 가장 많은 거래(금액기준)가 이루어진 k 가지 상품[date: 2020-12-25 19:11:40.479561 또는 2020-12-25 로 입력]</label>
+<label>B.	주어진 날 이전에 가장 많은 거래(금액기준)가 이루어진 k 가지 상품[date: 2020-12-25 19:11:40.479561 또는 2020-12-25 포맷으로 입력]</label>
 <form method="POST" class="post-form" action="/searchK/">  
     {% csrf_token %}  
     <input type="text" name="date" id="id_date" required maxlength="100" placeholder="input date" />  
