이름 학번 기재

--- a/employee/templates/front.html
+++ b/employee/templates/front.html
@@ -40,7 +40,11 @@
 </table>  
 <br>
 <br>
-<center><a href="/deleteAll" class="btn btn-primary">Delete ALL Data(고객, 거래, 상품)</a></center>  
+<center><a href="/deleteAll" class="btn btn-primary">Delete ALL Data(고객, 거래, 상품)</a></center> 
+
+<br>
+<br>
+<label>부산대학교 정보컴퓨터공학부 201624642 김남규, Database HW2</label> 
  
 </body>  
 </html>
